[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/qodot/src/nodes/qodot_map.gd" type="Script" id=1]
[ext_resource path="res://trenchbroom/werf.tres" type="Resource" id=2]
[ext_resource path="res://singletons/GameWorld.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]

[node name="GameWorld" type="Node"]
script = ExtResource( 3 )

[node name="GameWorld" type="Spatial" parent="."]
script = ExtResource( 1 )
map_file = "/home/odst/Programming/GodotProjects/RetroFPSGame/maps/terrain.map"
inverse_scale_factor = 64.0
entity_fgd = ExtResource( 2 )
base_texture_dir = "res://trenchbroom/textures"
texture_file_extensions = PoolStringArray( "png" )
worldspawn_layers = [  ]
brush_clip_texture = "special/clip"
face_skip_texture = "special/skip"
texture_wads = [  ]
material_file_extension = "tres"
default_material_albedo_uniform = ""
default_material = SubResource( 1 )
uv_unwrap_texel_size = 1.0
print_profiling_data = false
use_trenchbroom_group_hierarchy = true
tree_attach_batch_size = 16
set_owner_batch_size = 16

[connection signal="build_complete" from="GameWorld" to="." method="_on_GameWorld_build_complete"]
[connection signal="unwrap_uv2_complete" from="GameWorld" to="." method="_on_GameWorld_unwrap_uv2_complete"]
